src2/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Master</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Pending Internal</fullName>
        </values>
        <values>
            <fullName>Waiting</fullName>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Nespresso Case Process</fullName>
        <description>Nespresso Case Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Cancelled</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Pending Internal</fullName>
        </values>
        <values>
            <fullName>Waiting for Customer</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Account_Type__c</fullName>
        <formula>TEXT( Account.Type )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancellation_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cancellation Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Carrier_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Carrier</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases_Carrier</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Carrier_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Carrier Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cases (Carrier Contact)</relationshipLabel>
        <relationshipName>Cases_Carrier_Contact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Counter__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Duration__c</fullName>
        <formula>ROUND((ClosedDate - CreatedDate )*1440,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Qualification__c</fullName>
        <label>Case Qualification</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Case_CaseQualification</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Reason__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Purpose of Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Case_Reason__c.Is_Reason__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Case_Reason__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_origin__c</fullName>
        <formula>CASE( Origin, &quot;Email&quot;, IMAGE(&quot;/resource/IconEmail&quot;, &quot;Email&quot;), 
&quot;Phone&quot;, IMAGE(&quot;/resource/IconPhone&quot;, &quot;Phone&quot;), 
&quot;Facebook&quot;, IMAGE(&quot;/resource/IconFacebook&quot;, &quot;Facebook&quot;), 
&quot;Twitter&quot;, IMAGE(&quot;/resource/IconTwitter&quot;, &quot;Twitter&quot;), 
&quot;Instagram&quot;, IMAGE(&quot;/resource/IconInstagram&quot;, &quot;Instagram&quot;), 
&quot;YouTube&quot;, IMAGE(&quot;/resource/IconWeb&quot;, &quot;YouTube&quot;), 
&quot;Chat&quot;, IMAGE(&quot;/resource/IconChat&quot;, &quot;Chat&quot;), 
&quot;Web&quot;, IMAGE(&quot;/resource/IconWeb&quot;, &quot;Web&quot;), 
&quot;Community&quot;, IMAGE(&quot;/resource/IconDevice&quot;, &quot;Community&quot;), 
&quot;Device&quot;, IMAGE(&quot;/resource/IconDevice&quot;, &quot;Device&quot;), 
IMAGE(&quot;/resource/IconPhone&quot;, &quot;Phone&quot;))</formula>
        <label>Origin</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cause_Qualification__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cause Qualification</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Case_Reason__c.Is_Cause__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Case_Reason__c</referenceTo>
        <relationshipLabel>Cases (Cause Qualification)</relationshipLabel>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_ID__c</fullName>
        <label>Contract ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Procedure__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Procedure</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Action_Item__c.Type__c</field>
                <operation>equals</operation>
                <value>Procedure, Resolution</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Action_Item__c</referenceTo>
        <relationshipLabel>Cases (Procedure)</relationshipLabel>
        <relationshipName>Cases2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Step__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Current Step</label>
        <referenceTo>Action_Item__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_User_is_Owner__c</fullName>
        <formula>Owner:User.Id = $User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current User is Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exit_Time__c</fullName>
        <label>Exit Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FollowUp_Number__c</fullName>
        <label>FollowUp Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Modified_Date__c</fullName>
        <description>TEXT( LastModifiedDate )</description>
        <formula>TEXT( LastModifiedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Modified Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_ID__c</fullName>
        <label>Order ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Machines__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Other Machines</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Relationship__c</fullName>
        <label>Parent Relationship</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Related Issue</fullName>
                </value>
                <value>
                    <fullName>Operative Connection</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PickUp_Id__c</fullName>
        <label>PickUp Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preparation_Time__c</fullName>
        <formula>ROUND((Exit_Time__c-Starting_Time__c)*86400,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Preparation Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Batch__c</fullName>
        <label>Product Batch</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Best_Before_Date__c</fullName>
        <label>Product Best Before Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Re_open_Period__c</fullName>
        <formula>IF( DATETIMEVALUE(ClosedDate)&gt; DATETIMEVALUE(TODAY()) -21, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Re-open Period</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reopened__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reopened</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Repair_Center__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Repair Center</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases (Repair Center)</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reverse_Violation__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reverse Violation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLA_Code__c</fullName>
        <label>SLA Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Org_Code__c</fullName>
        <label>Sales Organization</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Sales_Organization</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Standing_Order_Id__c</fullName>
        <label>Standing Order Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Starting_Time__c</fullName>
        <label>Starting Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Test_Date__c</fullName>
        <label>Test Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Waiting_for_customer_date__c</fullName>
        <label>Waiting for customer date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Warehouse_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Warehouse</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases (Warehouse)</relationshipLabel>
        <relationshipName>Cases_Warehouse</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Warehouse_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Warehouse Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cases (Warehouse Contact)</relationshipLabel>
        <relationshipName>Cases_Warehouse_Contact</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>ALL</fullName>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>Current_Procedure__c</columns>
        <columns>Current_Step__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Current_Procedure__c</field>
            <operation>contains</operation>
            <value>Machine</value>
        </filters>
        <label>ALL</label>
    </listViews>
    <listViews>
        <fullName>After_Sales_B2B_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>After Sales B2B</label>
        <queue>After_Sales_B2B</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>After_Sales_B2C_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>After Sales B2C</label>
        <queue>After_Sales_B2C</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>After_Sales_Service_Team_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>After Sales Service Team</label>
        <queue>After_Sales_Service_Team</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <columns>Case_origin__c</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>OWNER_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Open Cases</label>
    </listViews>
    <listViews>
        <fullName>BO_Print_and_Send_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>BO Print and Send</label>
        <queue>BO_Print_and_Send</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Back_Office_Customer_Care_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Customer Care</label>
        <queue>Back_Office_Customer_Care</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Cancellation_Request_Queue_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Cancellation Request Queue</label>
        <queue>Cancellation_Request_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Complaint_Assistant_B2B_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Complaint Assistant B2B</label>
        <queue>Complaint_Assistant_B2B</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Complaint_Assistant_B2C_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Complaint Assistant B2C</label>
        <queue>Complaint_Assistant_B2C</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Complaint_Assistant_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Complaint Assistant B2C</label>
        <queue>Complaint_Assistant_B2C</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Controller_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Controller</label>
        <queue>Controller</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Credit_Collection_Team_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Credit Collection Team</label>
        <queue>Credit_Collection_Team</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Finance_Team_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Finance Team</label>
        <queue>Finance_Team</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Fraud_Team_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Fraud Team</label>
        <queue>Fraud_Team</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Chat</fullName>
        <active>true</active>
        <businessProcess>Master</businessProcess>
        <label>Chat</label>
    </recordTypes>
    <recordTypes>
        <fullName>Community</fullName>
        <active>true</active>
        <businessProcess>Master</businessProcess>
        <label>Community</label>
    </recordTypes>
    <recordTypes>
        <fullName>Email</fullName>
        <active>true</active>
        <businessProcess>Master</businessProcess>
        <label>Email</label>
    </recordTypes>
    <recordTypes>
        <fullName>Nespresso_Engage</fullName>
        <active>true</active>
        <businessProcess>Nespresso Case Process</businessProcess>
        <label>Nespresso Engage+</label>
    </recordTypes>
    <recordTypes>
        <fullName>Phone</fullName>
        <active>true</active>
        <businessProcess>Master</businessProcess>
        <label>Phone</label>
    </recordTypes>
    <recordTypes>
        <fullName>Social</fullName>
        <active>true</active>
        <businessProcess>Master</businessProcess>
        <label>Social</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Check_Mandatory_Contract</fullName>
        <active>true</active>
        <errorConditionFormula>IF(
OR(
ISNULL(Current_Procedure__c),
ISNULL(Current_Procedure__r.Mandatory_Entities__c) 
), false, 
IF(
AND(INCLUDES(Current_Procedure__r.Mandatory_Entities__c , &quot;Contract&quot;),ISBLANK(Contract_ID__c)),
true,
false
)

)</errorConditionFormula>
        <errorMessage>Contract is mandatory for this procedure!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_Mandatory_My_Machine</fullName>
        <active>true</active>
        <errorConditionFormula>IF(
OR(
ISNULL(Current_Procedure__c),
ISNULL(Current_Procedure__r.Mandatory_Entities__c) 
), false, 
IF(
AND(INCLUDES(Current_Procedure__r.Mandatory_Entities__c , &quot;My Machine&quot;),ISBLANK(AssetId)),
true,
false
)

)</errorConditionFormula>
        <errorMessage>Asset is mandatory for this procedure!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_Mandatory_Sales_Order</fullName>
        <active>true</active>
        <errorConditionFormula>IF(
OR(
ISNULL(Current_Procedure__c),
ISNULL(Current_Procedure__r.Mandatory_Entities__c) 
), false, 
IF(
AND(INCLUDES(Current_Procedure__r.Mandatory_Entities__c , &quot;Sales Order&quot;),ISBLANK(Order_ID__c)),
true,
false
)

)</errorConditionFormula>
        <errorMessage>Sales Order is mandatory for this procedure!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_Mandatory_Standing_Order</fullName>
        <active>true</active>
        <errorConditionFormula>IF(
OR(
ISNULL(Current_Procedure__c),
ISNULL(Current_Procedure__r.Mandatory_Entities__c) 
), false, 
IF(
AND(INCLUDES(Current_Procedure__r.Mandatory_Entities__c , &quot;Standing Order&quot;),ISBLANK(Standing_Order_Id__c)),
true,
false
)

)</errorConditionFormula>
        <errorMessage>Standing Order is mandatory for this procedure!</errorMessage>
    </validationRules>
</CustomObject>